feat: add glm-select component

--- a/src/assets/palette.scss
+++ b/src/assets/palette.scss
@@ -7,6 +7,7 @@ $primary-75: lch(75 20 300);
 //41, 15%, 5%
 $neutral-5: lch(5 5 300);
 $neutral-10: lch(10 5 300);
+$neutral-20: lch(20 5 300);
 $neutral-25: lch(25 7.5 300);
 $neutral-35: lch(35 7.5 300);
 $neutral-50: lch(50 7.5 300);
