feat: add `glm-dropdown-menu` component

--- a/src/assets/mixins.scss
+++ b/src/assets/mixins.scss
@@ -1,7 +1,7 @@
 @use './palette' as *;
 
 @function transparentize($color, $amount) {
-  @return color-mix(in lch, #{$color} $amount, rgba(0, 0, 0, 0));
+  @return rgba($color, $amount);
 }
 
 @mixin scrollbar() {
