--- a/src/assets/palette.scss
+++ b/src/assets/palette.scss
@@ -1,28 +1,27 @@
-$primary-25: lch(10 30 300);
-$primary-25: lch(25 80 300);
-$primary-50: lch(50 120 300);
-$primary-60: lch(60 50 300);
-$primary-75: lch(75 20 300);
+$primary-25: hsl(254, 50%, 16%); //  lch(10 30 300);
+$primary-25: hsl(248, 66%, 40%); // lch(25 80 300);
+$primary-50: hsl(252, 100%, 66%); // lch(50 120 300);
+$primary-60: hsl(257, 58%, 69%); // lch(60 50 300);
+$primary-75: hsl(261, 33%, 78%); // lch(75 20 300);
 
-//41, 15%, 5%
-$neutral-5: lch(5 5 300);
-$neutral-10: lch(10 5 300);
-$neutral-20: lch(20 5 300);
-$neutral-25: lch(25 7.5 300);
-$neutral-35: lch(35 7.5 300);
-$neutral-50: lch(50 7.5 300);
-$neutral-75: lch(75 7.5 300);
-$neutral-90: lch(90 5 300);
-$neutral-95: lch(95 5 300);
+$neutral-5: hsl(266, 18%, 8%); // lch(5 5 300);
+$neutral-10: hsl(266, 12%, 12%); // lch(10 5 300);
+$neutral-20: hsl(262, 8%, 20%); // lch(20 5 300);
+$neutral-25: hsl(262, 9%, 25%); // lch(25 7.5 300);
+$neutral-35: hsl(260, 7%, 34%); //  lch(35 7.5 300);
+$neutral-50: hsl(263, 5%, 48%); // lch(50 7.5 300);
+$neutral-75: hsl(257, 11%, 75%); // lch(75 7.5 300);
+$neutral-90: hsl(258, 20%, 90%); // lch(90 5 300);
+$neutral-95: hsl(264, 45%, 96%); //  lch(95 5 300);
 
-$red-15: lch(15 75 30);
-$red-25: lch(25 75 30);
-$red-40: lch(40 75 30);
-$red-50: lch(50 50 30);
-$red-65: lch(65 40 30);
-$red-75: lch(75 30 30);
+$red-15: hsl(0, 100%, 22%); //  lch(15 75 30);
+$red-25: hsl(357, 100%, 28%); // lch(25 75 30);
+$red-40: hsl(348, 100%, 37%); // lch(40 75 30);
+$red-50: hsl(3, 47%, 53%); // lch(50 50 30);
+$red-65: hsl(5, 60%, 68%); //  lch(65 40 30);
+$red-75: hsl(6, 69%, 77%); // lch(75 30 30);
 
-$green-25: lch(25 90 135);
-$green-50: lch(50 80 135);
-$green-75: lch(75 75 135);
-$green-90: lch(90 50 135);
+$green-25: hsl(120, 100%, 15%); // lch(25 90 135);
+$green-50: hsl(120, 100%, 27%); // lch(50 80 135);
+$green-75: hsl(113, 59%, 56%); // lch(75 75 135);
+$green-90: hsl(109, 80%, 78%); //  lch(90 50 135);
